@@ -97,7 +97,7 @@ specialization = 2/3, npoints = 20, alpha = 0.05/20)
     tmp <- ifelse(cbind(gen, specY, specX, sr), 1, 0)
     types <- c("Generalist", paste("Specialist", glabel[1], sep="_"),
         paste("Specialist", glabel[2], sep="_"), "Too_rare")
-    classes <- as.factor((1:4)[rowSums(tmp*col(tmp))])
+    classes <- factor((1:4)[rowSums(tmp*col(tmp))], levels=1:4)
     levels(classes) <- c("Generalist", paste("Specialist", glabel[1], sep="_"),
         paste("Specialist", glabel[2], sep="_"), "Too_rare")
     tab <- data.frame(Species=spp, y=Y, x=X, Classes=classes)
